--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,15 +5,36 @@
     position: relative;
     overflow: hidden;
     margin-bottom: 2rem;
+    width: 100%;
+    max-width: 100%;
+    height: auto;
 }
 
 .banner-container img {
     transition: transform 0.3s ease;
+    width: 100%;
+    height: auto;
+    display: block;
+    max-width: 100%;
+    object-fit: cover;
 }
 
 .banner-container:hover img {
     transform: scale(1.02);
 }
+
+/* Banner link styling */
+.banner-link {
+    display: block;
+    text-decoration: none;
+    width: 100%;
+}
+
+.banner-link:hover {
+    text-decoration: none;
+}
+
+/* Remove debug styles */
 
 /* Section styling */
 section {
@@ -86,6 +107,10 @@ section .lead {
         margin-bottom: 1rem;
     }
     
+    .banner-container img {
+        max-height: 300px;
+    }
+    
     section {
         padding: 2rem 0;
     }
@@ -93,6 +118,12 @@ section .lead {
     .fuIcon img {
         width: 35px;
         height: 35px;
+    }
+}
+
+@media (min-width: 769px) {
+    .banner-container img {
+        max-height: 500px;
     }
 }
 
